# tpt-spark

./: .gitignore  CLAUDE.md  HEADLESS_API.md  LICENSE  README.md  TODO 1260623.md  TODO.md  index.html  package-lock.json  package.json  todo 1260628.md  todo1.md  vite.config.ts
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  conversation.rs  headless.rs  lib.rs  main.rs
src-tauri/src/engine/: candle_engine.rs  cpu_fallback.rs  mod.rs  stub.rs  tpt_gpu_engine.rs  wgpu_context.rs  wgpu_engine.rs  wgpu_kvcache.rs  wgpu_loader.rs  wgpu_ops.rs
src-tauri/src/engine/shaders/: accumulate.wgsl  attention.wgsl  bias_add.wgsl  dequant_f16.wgsl  dequant_q2k.wgsl  dequant_q3k.wgsl  dequant_q4_0.wgsl  dequant_q4k.wgsl  dequant_q5_0.wgsl  dequant_q5_1.wgsl  dequant_q5k.wgsl  dequant_q6k.wgsl  dequant_q8.wgsl  geglu.wgsl  gemm.wgsl  rms_norm.wgsl  rope.wgsl  silu.wgsl
src-tauri/src/models/: mod.rs
