[package]
name = "tpt-spark"
version = "1.0.0"
description = "TPT Spark – Project Forge: Lean, native, cross-platform LLM runtime"
authors = ["TPT Solutions"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "tpt_spark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell   = "2"
tauri-plugin-dialog  = "2"
tauri-plugin-fs      = "2"
serde                = { version = "1", features = ["derive"] }
serde_json           = "1"
tokio                = { version = "1", features = ["full"] }
anyhow               = "1"
thiserror            = "1"
uuid                 = { version = "1", features = ["v4"] }
chrono               = { version = "0.4", features = ["serde"] }
dirs-next            = "2"
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }
reqwest              = { version = "0.12", features = ["stream"] }
futures-util         = "0.3"

# Candle engine (CPU inference via HuggingFace candle + GGUF)
[dependencies.candle-core]
version  = "0.8"
optional = true

[dependencies.candle-transformers]
version  = "0.8"
optional = true

[dependencies.tokenizers]
version          = "0.21"
optional         = true
default-features = false
features         = ["onig"]

# wgpu engine (GPU inference via wgpu + custom WGSL shaders)
[dependencies.wgpu]
version  = "0.20"
optional = true

[dependencies.bytemuck]
version  = "1"
optional = true
features = ["derive"]

[dependencies.memmap2]
version  = "0.9"
optional = true

[dependencies.half]
version  = "2"
optional = true

[dependencies.pollster]
version  = "0.3"
optional = true

# tpt-gpu engine (tpt-gpu-runtime wraps the Layer 4 GPU kernel suite)
# Uncomment once tpt-gpu-runtime 0.1 is published to crates.io:
# [dependencies.tpt-gpu-runtime]
# version  = "0.1"
# optional = true

# Feature flags
[features]
default       = ["engine-stub"]
engine-stub   = []
engine-candle = ["candle-core", "candle-transformers", "tokenizers"]
# engine-wgpu unions candle deps so the CPU fallback path is always available
engine-wgpu   = ["wgpu", "bytemuck", "memmap2", "half", "pollster",
                  "candle-core", "candle-transformers", "tokenizers"]
# engine-tpt-gpu wraps the tpt-gpu-runtime crate (Layer 4 GEMM / FlashAttention v2).
# Uncomment the tpt-gpu-runtime dependency below once the crate is published.
# Falls back through engine-wgpu → engine-candle when no suitable GPU is found.
engine-tpt-gpu = []
# Force a console window on Windows even in release builds (useful for headless server deployments).
headless-console = []
